FlightPath 6.x Changelog
========================

2022-04-15
  Added extra permission to prereqs module, so that you can only override locks on courses if you have permission.
  
  Adjusted the "locked but checked" icon for courses in prereqs, to make the check a little more obvious.

  Removing alerts (from the confirm remove dialog screen) shows spinner icon when clicking button.
  
  Upgraded included PHPMailer library from 6.0 to 6.6 to take advantage of newer code with security enhancements.
  
  Fixed bug where files being emailed were not being decrypted BEFORE being sent as email, making them unreadible to the recipient.
  

2022-04-12
  Added extra classes to engagements for text messages, to say which phone number the message was being sent from and to.  This should help with styling if you want
  to have different colors or other styles based on what phone line it was sent to or from.


2022-04-11
  Removed concept of trying to "preload" a set number of courses on login.  This is now handled in a more elegant way.
  
  Added link to schools help page to schools module settings page.
  
  Added "Loading" dialog when you search and receive a single student. 
  
  Changed "Advisee Alerts" tab to say just "Alerts".
  
  Placed all db connection code in settings.php, and put the pdo into GLOBALS, so we only make 1 database connection per page load.
  
  
2022-04-10
  Added more messages on login page for if login failed (admin user is only one allowed, students not allowed, etc).
  

2022-04-04
  Using font awesome question-circle icon for popup_description link instead of regular question mark.  Also used margin to add a little more spacing.
  

2022-04-02
  Adjusted weights to better alphabetize the admin console menu items.

  Added new silk icons to system module directory.

  Added ability to have "pseudo" opt-groups for checkboxes fields, where checkboxes can be grouped
  the same way select lists can, in a multi-dimensional array.
  

2022-03-31