@@ -827,6 +827,11 @@ function content_view_content($cid) {
     
       
   $content = content_load($cid);  // assumed to be path/content/CID  So, arg(1) == the cid
+  if (!$content) {
+    // Couldn't find it!  Show page not found.
+    display_not_found();
+    return;
+  }
   $render['#content_object'] = $content;
   $type = $content->type;
   $types = content_get_types();
@@ -992,6 +997,10 @@ function content_edit_content_form($type = "", $cid = "") {
 
   if ($cid != "new") {
     $content = content_load($cid);
+    if (!$content) {
+      display_not_found();
+      return;
+    }
     fp_set_title(t("Editing") . " " . $content->title . "");
     // Re-set $type, just in case the user put the wrong type in the
     // URL
@@ -2034,6 +2043,8 @@ function content_content_load(&$content) {
                     LIMIT 1", array( $content->cid));
   $content = db_fetch_object($res);
 
+  if (!$content) return FALSE;
+
   // Populate our field values in the content object
 
   $res = db_query("SELECT * FROM content__$content->type WHERE vid = ?", array($content->vid));
@@ -2234,20 +2245,79 @@ function content_content_load(&$content) {
 }
 
 
-
-
 /**
- * Sample hook for hook_content_load
- * 
- * This hook lets modules act on content as it is being loaded.  Notice
- * the content is being passed by reference, so whatever changes you make
- * to this array will be added in.  Nothing needs to be returned.
- *
- * @param unknown_type $content
+ * hook_cron
  */
-function hook_content_load(&$content) {
-  $content["new_field"] = "something something";
-}
+function content_cron() {
+  
+  // We want to delete any content (and files!) which have been scheduled for deletion.
+  // Check to see when the last time we did this.  If less than X number of days, we don't do it.
+  $last_run = intval(variable_get("content_last_run_delete_flag_removal", 0));
+  $check_against = strtotime("NOW - 7 DAYS");  // don't run any more often than once every 7 DAYS.
+  $delete_threshold = strtotime("NOW - 7 DAYS");  // delete content older than 7 days.
+  $c = 0;
+  if ($check_against > $last_run) {
+    
+    $res = db_query("SELECT * FROM content 
+                     WHERE delete_flag = 1
+                     AND `updated` < ?", array($delete_threshold));
+    while ($cur = db_fetch_object($res)) {
+            
+      $cid = $cur->cid;
+      $type = $cur->type;
+      
+      // Sanitize $type as best we can.  Should be fine coming from database, but just in case.
+      $type = str_replace("`", "", $type);
+      $type = str_replace("'", "", $type);
+      $type = str_replace('"', "", $type);
+      $type = str_replace(' ', "", $type);
+      $type = str_replace('(', "", $type);
+      
+      
+      // First, are there any files associated with this cid we need to delete?
+      $res2 = db_query("SELECT * FROM content_files WHERE cid = ?", array($cid));
+      while ($cur2 = db_fetch_object($res2)) {
+        $fid = $cur2->fid;
+        $full_filename = fp_get_files_path() . '/content_uploads/' . $cur2->filename;
+        if (!unlink($full_filename)) {
+          watchdog("content", "Could not delete $full_filename for content $cid", array(), WATCHDOG_ERROR);
+          fpm("Could not delete $full_filename for content $cid");          
+        }
+        db_query("DELETE FROM content_files WHERE fid = ?", array($fid));
+      }
+      
+      // Now, delete the content from the table it belongs to...
+      db_query("DELETE FROM `content__$type` WHERE cid = ?", array($cid));
+      
+      // Delete from content_versions and content_last_access, engagements_tracking
+      db_query("DELETE FROM content_versions WHERE cid = ?", array($cid));
+      db_query("DELETE FROM content_last_access WHERE cid = ?", array($cid));
+      db_query("DELETE FROM engagements_tracking WHERE cid = ?", array($cid));
+      
+      // Lastly, delete from content table itself.
+      db_query("DELETE FROM content WHERE cid = ?", array($cid));
+      watchdog("content", "Deleted from db deleted content $cid", array(), WATCHDOG_DEBUG);
+      $c++;      
+    } // while cur
+    
+    watchdog("content", "Delete from db complete. $c items removed.", array(), WATCHDOG_DEBUG);
+    variable_set("content_last_run_delete_flag_removal", time());
+    
+    
+  } // check against > last_run, so we should do it.
+  
+  
+  
+} // hook_cron
+
+
+
+
+
+
+
+
+
 
 
 
